# TeAMOFlow

./: LICENSE  README.md  benchmarking_ML.py  embedding_graphs.py  initializer_graphs.py  input_utils.py  loss_graphs.py  matrix_factorization.py  predict_graphs.py  pyproject.toml  utils.py
examples/: benchmark_toydata.py  benchmarking_ML.py
src/teamoflow/: __init__.py
src/teamoflow/mf/: __init__.py  benchmark_toydata.py  benchmarking_ML.py  embedding_graphs.py  initializer_graphs.py  input_utils.py  loss_graphs.py  matrix_factorization.py  utils.py
src/teamoflow/nn/: initializer_graphs.py  layers.py  loss_graphs.py  user_tower.py  utils.py
test/: test_embedding.py  test_initializer.py  test_loss.py  test_predict.py  test_utils.py
