[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teamoflow"
version = "0.1.0"
authors = [
  { name="andrew_jy", email="andrewjych@gmail.com" },
]
description = "A TensorFlow 2.X-based matrix factorization framework, particularly for the purpose of query (user)-value (item) matching."
readme = "README.md"
license = { file="" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GitHubOfAndrew/TeAMOFlow"
"Bug Tracker" = "https://github.com/GitHubOfAndrew/TeAMOFlow/issues"